# bouldering-highlights

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
notebooks/: easyOCR.ipynb  pipeline.ipynb
src/bouldering/: utils.py
src/bouldering/features/: audio.py  audio_semantics.py  events.py  motion.py  pose.py  temporal.py
src/bouldering/io/: video_reader.py
src/bouldering/media/audio/: audio.py
src/bouldering/media/video/: io.py  sequence.py  video.py
src/bouldering/models/audio/: yamnet.py
src/bouldering/models/detection/: activity.py  postprocessing.py  tracking.py  yolo.py
src/bouldering/models/ocr/: detector.py  parser.py  splitter.py  utils.py
src/bouldering/models/pose/: mediapipe.py
src/bouldering/processing/: ocr.py  parser.py  scene.py  utils.py
src/bouldering/scenes/: detector.py
src/bouldering/scoring/: audio.py  events.py  score.py  utils.py  visual.py
src/bouldering/scripts/: highlight.py  setup_data.py
src/bouldering/structure/: pipeline.py
src/bouldering/structure/scenes/: base.py  content.py  ocr.py  pipelines.py
src/bouldering/structure/segments/: segments.py
src/bouldering/tracking/: activity.py  postprocessing.py  tracking.py
src/bouldering/utils/: ffmpeg.py  image.py  typing.py
src/bouldering/video/: audio.py  ffmpeg.py  io.py  sequence.py  video.py  video_reader.py  video_writer.py
src/bouldering/vision/ocr/: detector.py  parser.py  splitter.py
src/bouldering/vision/scenes/: base.py  content.py  ocr.py  pipeline.py
src/bouldering/visualization/: detection.py  primitives.py
tests/: conftest.py  test_audio.py  test_sequence.py  test_version.py  test_video.py
