[build-system]
requires = ["setuptools >= 80"]
build-backend = "setuptools.build_meta"

[project]
name = "bouldering"
dynamic = ["version", "readme"]
authors = [
    {name="Souheil Maatoug", email="souheil.maatoug@gmail.com"}
]
description = "Generating automatically highlights from bouldering competition videos."
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = ["opencv-python==4.12.0.88"]

[project.optional-dependencies]
dev = [
    # dev
    "notebook>=7",
    # lint
    "ruff>=0.14",
    "pre-commit>=4.3",
    # test
    "pytest>=8",
    "pytest-cov>=7",
    # doc
    "sphinx>=7.4.7",
    "sphinx-autoapi==3.6.1",
    "furo==2024.8.6",
    "myst-parser>=3.0.1",
    "astroid<4",
]
[project.urls]
repository = "https://github.com/SouheilMaatoug/bouldering-highlights"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.bouldering", "src.bouldering.*"]
exclude = ["tests", "tests.*"]

[tool.setuptools.dynamic]
version = { attr = "src.bouldering.__version__" }
readme = { file = ["README.md"] }

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
indent-width = 4
fix = true
exclude = [
    "notebooks",
    "tests"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["I", "E", "F", "G"]  # isort, pyflakes, pycodestyle, pydocstyle
ignore = ["D100", "D104", "E402"]

[tool.ruff.lint.isort]
forced-separate = ["tests"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true
